update frontend developer config

--- a/database/roadmaps/frontend_developer/config.json
+++ b/database/roadmaps/frontend_developer/config.json
@@ -108,6 +108,9 @@
     ],
     [
       {
+        "options": {
+          "allow_multiple_choice": false
+        },
         "refs": [
           {
             "concept": "jest"
