update concept (vcs) name

--- a/database/roadmaps/frontend_developer/config.json
+++ b/database/roadmaps/frontend_developer/config.json
@@ -53,7 +53,7 @@
       {
         "refs": [
           {
-            "concept": "version_control_system"
+            "concept": "version_control_systems"
           }
         ]
       }
