update frontend developer config

--- a/database/roadmaps/frontend_developer/config.json
+++ b/database/roadmaps/frontend_developer/config.json
@@ -109,7 +109,7 @@
     [
       {
         "options": {
-          "allow_multiple_choice": false
+          "allow_multiple_choice": true
         },
         "refs": [
           {
